src/test/ui/issues/issue-17718-const-bad-values.stderr
error[E0017]: references in constants may only refer to immutable values
  --> $DIR/issue-17718-const-bad-values.rs:1:34
   |
LL | const C1: &'static mut [usize] = &mut [];
   |                                  ^^^^^^^ constants require immutable values

error[E0013]: constants cannot refer to statics, use a constant instead
  --> $DIR/issue-17718-const-bad-values.rs:5:46
   |
LL | const C2: &'static mut usize = unsafe { &mut S };
   |                                              ^

error[E0017]: references in constants may only refer to immutable values
  --> $DIR/issue-17718-const-bad-values.rs:5:41
   |
LL | const C2: &'static mut usize = unsafe { &mut S };
   |                                         ^^^^^^ constants require immutable values

error[E0019]: constant contains unimplemented expression type
  --> $DIR/issue-17718-const-bad-values.rs:5:41
   |
LL | const C2: &'static mut usize = unsafe { &mut S };
   |                                         ^^^^^^

error[E0658]: dereferencing raw pointers in constants is unstable
  --> $DIR/issue-17718-const-bad-values.rs:5:41
   |
LL | const C2: &'static mut usize = unsafe { &mut S };
   |                                         ^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51911
   = help: add `#![feature(const_raw_ptr_deref)]` to the crate attributes to enable

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0013, E0017, E0019, E0658.
For more information about an error, try `rustc --explain E0013`.
